Fix vertical jitter when dragging-and-dropping a widget
This jitter seemed to be caused by the miniscule HTML whitespace between
the widgets. To fix, I made the entire widget column a flex container,
which naturally eliminates any HTML whitespace.

--- a/src/styles/_widget-board.scss
+++ b/src/styles/_widget-board.scss
@@ -9,6 +9,8 @@
 .widget-board-column {
   flex-grow: 1;
   flex-basis: 0;
+  display: flex;
+  flex-direction: column;
   min-width: 200px;
   margin: 0 10px;
   margin-bottom: 20px;
